fix checkbox spacing

--- a/styles.css
+++ b/styles.css
@@ -1667,7 +1667,7 @@ textarea.form-control {
 	display: flex;
 	min-height: 1.5rem;
 	padding-left: 1.5em;
-	margin-bottom: .75rem
+	margin-bottom: .25rem
 }
 
 .form-check .form-check-input {
